# EuPay-smartcontract

./: .env.example  .gitignore  CONTRIBUTORS.md  Cargo.toml  README.md  package-lock.json  package.json  pr.md
.github/workflows/: backend.yml
backend/: .env.example  MIGRATIONS.md  package-lock.json  package.json
backend/src/: health.ts  index.ts
backend/src/__tests__/: vaultIntegration.test.ts
backend/src/db/: migrate.ts  pool.ts  schema.sql  schema.ts
backend/src/queue/: asyncQueue.ts
backend/src/scheduler/: scheduler.ts
backend/src/services/: archiveService.ts  dataLifecycle.ts  secretsBootstrap.ts  vaultClient.ts
contracts/automation_gateway/src/: lib.rs  test.rs
contracts/payroll_stream/: Cargo.toml
contracts/payroll_stream/src/: lib.rs  pause_test.rs  stream_pause.rs
contracts/payroll_vault/src/: lib.rs
contracts/treasury_vault/: Cargo.toml
contracts/treasury_vault/src/: lib.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: arithmetic_fuzz.rs  batch_create_fuzz.rs  claimable_fuzz.rs
monitoring/: README.md
src/: App.tsx
src/components/: ContactModal.tsx  FundAccountButton.tsx  Helpcenter.tsx  NotificationCenter.tsx  StreamCreator.tsx  TransactionSimulationModal.tsx  WalletButton.tsx
src/components/layout/: Navbar.tsx
src/context/: ThemeContext.tsx
src/hooks/: useExport.ts  usePayroll.ts  usePersistentNotifications.ts  useWorkforceRegistry.ts
src/pages/: AddressBook.tsx  EmployerDashboard.tsx  Home.tsx  WorkerDashboard.tsx  WorkforceRegistry.tsx
src/util/: exportData.ts
tests/: stream-withdraw.spec.ts
(+6 files in other folders)
